--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsrsasign": "^10.5.27",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
+    "vuedraggable": "^2.24.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
