--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.2.0",
     "echarts": "^5.4.0",
     "element-ui": "^2.15.10",
-    "jsrsasign": "^10.5.27",
+    "jsrsasign": "^11.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
     "vuedraggable": "^2.24.3",
@@ -23,7 +25,6 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
