--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.2.0",
     "echarts": "^5.4.0",
     "element-ui": "^2.15.10",
+    "file-saver": "^2.0.5",
     "jsrsasign": "^11.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
